tests/NormalTests/paczka2/big_fuzzy/70249703.err
Error in line 2: A796 S100 176,a
Error in line 3: MbBelb0Gs S407 66,6
Error in line 13: RGpkU A796 57,20
Error in line 18: bIPsGJsd5HT S100 9,6
Error in line 25: Dq1TW S664 81,4
Error in line 43: MbBelb0Gs S--4 111,3
Error in line 35: Dq1TW S100 18,4
Error in line 41: jrh S664 94,9
Error in line 28: bIPsGJsd5HT A796 69,5
Error in line 45: jrh S100 61,0
Error in line 40: MbBelb0Gs S664 26,7
Error in line 46: bIPsGJsd5HT S664 98,3
Error in line 60: MbBelb0Gs S100 21,4
Error in line 63: MbBelb0Gs S664 76,0
Error in line 70: 8DoJud S664 36,5
Error in line 68: A796 S664 2,9
Error in line 73: bIPsGJsd5HT A796 35,2
Error in line 77: bIPsGJsd5HT S664 16,5
Error in line 65: Dq1TW A796 68,4
Error in line 91: bIPsGJsd5HT S407 94,7
Error in line 92: bIPsGJsd5HT S100 25,3
Error in line 79: jrh A796 1,7
Error in line 101: jrh S100 40,7
Error in line 112: RGpkU A796 98,3
Error in line 104: bIPsGJsd5HT S407 101,5
Error in line 110: 8DoJud S664 79,3
Error in line 121: 8DoJud S407 14,7
Error in line 122: MbBelb0Gs S664 91,5
Error in line 123: 8DoJud S100 22,5
Error in line 129: bIPsGJsd5HT A796 52,7
Error in line 132: RGpkU S407 395,53
Error in line 116: RGpkU S407 85,0
Error in line 165: MbBelb0Gs S407 25,0
Error in line 163: 8DoJud S664 2,6
Error in line 169: 8DoJud S100 91,5
Error in line 175: 8DoJud A796 3,2
Error in line 193: 8DoJud S407 49,8
Error in line 194: 8DoJud S664 57,1
Error in line 192: MbBelb0Gs A796 20,1
Error in line 195: RGpkU A796 6,9
Error in line 197: MbBelb0Gs S407 91,0
Error in line 200: MbBelb0Gs A796 59,6
Error in line 205: 8DoJud S407 29,3
Error in line 212: Dq1TW S407 69,5
Error in line 237: 8DoJud A796 75,3
